--- a/Tareas/Calculadora/index.css
+++ b/Tareas/Calculadora/index.css
@@ -18,21 +18,18 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 75px);
     grid-template-rows: 160px repeat(5, 75px);
-    background-color: #05b8ff;
     padding: 15px;
-    border-radius: 32px;
-    box-shadow: 15px 10px 0px 5px #ffffff33;
+    border: none;
 }
 
 button {
     cursor: pointer;
     margin: 5px;
     padding: 0;
-    border-radius: 32px;
     font-size: 1.5em;
     border: none;
     background-color: #ffffff;
-    box-shadow: 5px 5px 10px -3px #3a252540, -5px -5px 15px 3px #ffffff1f;
+    box-shadow: 5px 5px 10px -3px #3a252540;
 }
 
 button:active {
